--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,7 @@
 {
-    "spellright.language": [
-        "en"
-    ],
+    "spellright.language": [],
     "spellright.documentTypes": [
         "markdown",
-        "latex",
         "plaintext"
     ]
 }
